--- a/app/globals.css
+++ b/app/globals.css
@@ -73,7 +73,19 @@
   padding-left: 80px;
   padding-right: 80px;
 }
-
+.contact-bg{
+  background-image: url("../public/bg-image.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.team-bg{
+  background-image: url("../public/team-image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  
+}
 @media screen and (max-width: 1536px) {
   .wapper {
     max-width: 1366px;
